force-app/main/default/objects/ALM_OTO_Program__e/ALM_OTO_Program__e.object-meta.xml
<CustomObject>
    <label>ALM OTO Program</label>
    <pluralLabel>ALM OTO Programs</pluralLabel>
</CustomObject>