force-app/main/default/objects/ALM_OTO_Program__e/fields/ALM_Type__c.field-meta.xml
<CustomField>
    <fullName>ALM_Type__c</fullName>
    <label>ALM Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>