force-app/main/default/objects/ALM_OTO_Program__e/fields/Case_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_ID__c</fullName>
    <label>Case ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>