force-app/main/default/objects/ALM_OTO_Program__e/fields/Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID__c</fullName>
    <label>Opportunity ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>